# linksoup

./: .gitignore  Makefile  README.md  pyproject.toml  sample-config.toml
app/: __init__.py  main.py
app/routers/: root.py
templates/pages/: home.html
