[tool.poetry]
name = "linksoup"
version = "0.1.0"
description = "Bookmark manager"
authors = ["Pradeep Gowda <pradeep@btbytes.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
Jinja2 = "^3.1.2"
toml = "^0.10.2"
sqlalchemy = "^2.0.12"

[tool.poetry.group.dev.dependencies]
playwright = "1.33.0"
pytest = "^7.3.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
